.hazyforge/clusters/hazy-sites/namespace/hazyforge-academy/manifests/hazyforge-academy-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-default-route-to-hazyforge-academy
  namespace: hazyforge-academy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
      name: hazyforge-academy
