.hazyforge/clusters/hazy-sites/namespace/hazyforge-academy/manifests/hazyforge-academy-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hazyforge-academy-route
spec:
  parentRefs:
    - name: gateway
      namespace: default
  hostnames:
    - learn.hazyforge.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hazyforge-academy
          namespace: hazyforge-academy
          port: 80
